<resources>
    <string name="app_name">JHotel_Android_Raudina</string>
    <string name="register_here">Register here!</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="login">LOGIN</string>
    <string name="room_number">Room Number:</string>
    <string name="tariff">Tariff:</string>
    <string name="durasi">Durasi:</string>
    <string name="total">Total:</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="textview">TextView</string>
    <string name="hitung">HITUNG</string>
    <string name="pesan">PESAN</string>
</resources>
